Delete benches and examples

--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -29,3 +29,9 @@ lindera-tokenizer.workspace = true
 
 [dev-dependencies]
 serde_json.workspace = true
+criterion.workspace = true
+once_cell.workspace = true
+
+[[bench]]
+name = "bench"
+harness = false
