--- a/lindera-analyzer/Cargo.toml
+++ b/lindera-analyzer/Cargo.toml
@@ -13,13 +13,13 @@ license = "MIT"
 
 [features]
 default = []  # No directories included
-ipadic = ["lindera-tokenizer/ipadic"]  # Include IPADIC dictionary (Japanese)
-ipadic-neologd = ["lindera-tokenizer/ipadic-neologd"]  # Include IPADIC NEologd dictionary (Japanese)
-unidic = ["lindera-tokenizer/unidic"]  # Include UniDic dictionary (Japanese)
-ko-dic = ["lindera-tokenizer/ko-dic"]  # Include ko-dic dictionary (Korean)
-cc-cedict = ["lindera-tokenizer/cc-cedict"]  # Include CC-CEDICT dictionary (Chinese)
+ipadic = ["lindera-tokenizer/ipadic", "lindera-filter/ipadic"]  # Include IPADIC dictionary (Japanese)
+ipadic-neologd = ["lindera-tokenizer/ipadic-neologd", "lindera-filter/ipadic-neologd"]  # Include IPADIC NEologd dictionary (Japanese)
+unidic = ["lindera-tokenizer/unidic", "lindera-filter/unidic"]  # Include UniDic dictionary (Japanese)
+ko-dic = ["lindera-tokenizer/ko-dic", "lindera-filter/ko-dic"]  # Include ko-dic dictionary (Korean)
+cc-cedict = ["lindera-tokenizer/cc-cedict", "lindera-filter/cc-cedict"]  # Include CC-CEDICT dictionary (Chinese)
 compress = ["lindera-tokenizer/compress"]  # Compress dictionaries
-filter = []  # Include filters
+filter = ["lindera-filter/filter"]  # Include filters
 
 
 [dependencies]
