--- a/lindera-ipadic-neologd-builder/Cargo.toml
+++ b/lindera-ipadic-neologd-builder/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-compress = ["lindera-compress"]
+compress = ["lindera-dictionary-builder/compress"]
 
 [dependencies]
 anyhow.workspace = true
@@ -27,7 +27,6 @@ log.workspace = true
 serde.workspace = true
 yada.workspace = true
 
-lindera-compress = { workspace = true, optional = true }
 lindera-core.workspace = true
 lindera-decompress.workspace = true
 lindera-dictionary-builder.workspace = true
