Reuse dictionary builder code (#389)
* reuse code with UserDictBuilder

* move user dict builder to own file

* reuse cost matrix builder code

* reuse dict builder code

* box UserDictBuilder function field

* reuse chardef builder code

* reuse unk builder code

* reuse build_user_dictionary function

* share `read_file_with_encoding()` function code

* cleanup compress feature in dictionary builder

* cleanup dictionary builders

* add basic library documentation

* cleanup root namepsace exports

* accept input_dir parameter in cost matrix build function

* remove unused dictionary builder dependencies

* don't decode utf-8 csv manually

* skip setting fields identical to default

* skip first item when writing details from simple userdic row
first item is always the surface

* fix first csv item not being normalized

* remove unused env_logger dependency

--- a/lindera-cc-cedict-builder/Cargo.toml
+++ b/lindera-cc-cedict-builder/Cargo.toml
@@ -12,19 +12,11 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-compress = ["lindera-compress"]
+compress = ["lindera-dictionary-builder/compress"]
 
 [dependencies]
 anyhow.workspace = true
-bincode.workspace = true
-byteorder.workspace = true
-csv.workspace = true
-encoding.workspace = true
-env_logger.workspace = true
-glob.workspace = true
-log.workspace = true
-yada.workspace = true
 
-lindera-compress = { workspace = true, optional = true }
 lindera-core.workspace = true
 lindera-decompress.workspace = true
+lindera-dictionary-builder.workspace = true
