--- a/lindera-unidic-builder/Cargo.toml
+++ b/lindera-unidic-builder/Cargo.toml
@@ -12,19 +12,11 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-compress = ["lindera-compress"]
+compress = ["lindera-dictionary-builder/compress"]
 
 [dependencies]
 anyhow.workspace = true
-bincode.workspace = true
-byteorder.workspace = true
-csv.workspace = true
-encoding.workspace = true
-env_logger.workspace = true
-glob.workspace = true
-log.workspace = true
-yada.workspace = true
 
-lindera-compress = { workspace = true, optional = true }
 lindera-core.workspace = true
 lindera-decompress.workspace = true
+lindera-dictionary-builder.workspace = true
