--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "lindera",
     "lindera-analyzer",
+    "lindera-assets",
     "lindera-dictionary-builder",
     "lindera-cc-cedict",
     "lindera-cc-cedict-builder",
@@ -26,6 +27,7 @@ resolver = "2"
 [workspace.dependencies]
 lindera = { version = "0.31.0", path = "lindera" }
 lindera-analyzer = { version = "0.31.0", path = "lindera-analyzer" }
+lindera-assets = { version = "0.31.0", path = "lindera-assets" }
 lindera-dictionary-builder = { version = "0.31.0", path = "lindera-dictionary-builder" }
 lindera-cc-cedict = { version = "0.31.0", path = "lindera-cc-cedict" }
 lindera-cc-cedict-builder = { version = "0.31.0", path = "lindera-cc-cedict-builder" }
