--- a/lindera-ipadic-neologd/Cargo.toml
+++ b/lindera-ipadic-neologd/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-ipadic-neologd = ["encoding", "flate2", "tar", "ureq"]
+ipadic-neologd = ["lindera-assets"]
 compress = ["lindera-ipadic-neologd-builder/compress", "lindera-decompress"]
 
 [dependencies]
@@ -24,10 +24,6 @@ lindera-core.workspace = true
 lindera-decompress = { workspace = true, optional = true }
 
 [build-dependencies]
-encoding = { workspace = true, optional = true }
-flate2 = { workspace = true, optional = true }
-tar = { workspace = true, optional = true }
-ureq = { workspace = true, optional = true }
+lindera-assets = { workspace = true, optional = true }
 
-lindera-core.workspace = true
 lindera-ipadic-neologd-builder.workspace = true
