--- a/lindera-ko-dic/Cargo.toml
+++ b/lindera-ko-dic/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-ko-dic = ["encoding", "flate2", "tar", "ureq"]
+ko-dic = ["lindera-assets"]
 compress = ["lindera-ko-dic-builder/compress", "lindera-decompress"]
 
 [dependencies]
@@ -24,10 +24,6 @@ lindera-core.workspace = true
 lindera-decompress = { workspace = true, optional = true }
 
 [build-dependencies]
-encoding = { workspace = true, optional = true }
-flate2 = { workspace = true, optional = true }
-tar = { workspace =true, optional = true }
-ureq = { workspace = true, optional = true }
+lindera-assets = { workspace = true, optional = true }
 
-lindera-core.workspace = true
 lindera-ko-dic-builder.workspace = true
