--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,14 +108,14 @@ jobs:
           toolchain: ${{ matrix.toolchain }}
           components: rustfmt, clippy
 
-      - name: Publish lindera-core
+      - name: Publish lindera-dictionary
         run: |
-          LINDERA_CORE_VERSION=$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[] | select(.name=="lindera-core") | .version')
-          LINDERA_CORE_VERSIONS=$(curl -s -XGET https://crates.io/api/v1/crates/lindera-core | jq -r 'select(.versions != null) | .versions[].num')
-          if echo ${LINDERA_CORE_VERSIONS} | grep ${LINDERA_CORE_VERSION} >/dev/null; then
-            echo "lindera-core ${LINDERA_CORE_VERSION} has already published"
+          LINDERA_DICTIONARY_VERSION=$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[] | select(.name=="lindera-dictionary") | .version')
+          LINDERA_DICTIONARY_VERSIONS=$(curl -s -XGET https://crates.io/api/v1/crates/lindera-dictionary | jq -r 'select(.versions != null) | .versions[].num')
+          if echo ${LINDERA_DICTIONARY_VERSIONS} | grep ${LINDERA_DICTIONARY_VERSION} >/dev/null; then
+            echo "lindera-dictionary ${LINDERA_DICTIONARY_VERSION} has already published"
           else
-            pushd lindera-core
+            pushd lindera-dictionary
             cargo publish --token ${{ secrets.CRATES_TOKEN }}
             popd
           fi
