--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -41,6 +41,7 @@ once_cell.workspace = true
 regex.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+serde_yaml.workspace = true
 strum.workspace = true
 strum_macros.workspace = true
 unicode-blocks.workspace = true
