--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ byteorder = "1.5.0"
 clap = { version = "4.5.20", features = ["derive", "cargo"] }
 criterion = { version = "0.5.1", features = ["html_reports"] }
 csv = "1.3.0"
+derive_builder = "0.20.2"
 encoding = "0.2.33"
 encoding_rs = "0.8.35"
 encoding_rs_io = "0.1.7"
@@ -37,18 +38,18 @@ log = "0.4.21"
 once_cell = "1.19.0"
 rand = "0.8.5"
 regex = "1.11.1"
-serde = { version = "1.0.213", features = ["derive"] }
+serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
+serde_yaml = "0.9.34"
 strum = { version = "0.26.2", features = ["derive"] }
 strum_macros = "0.26.2"
 tar = "0.4.40"
-thiserror = "1.0.65"
+thiserror = "1.0.66"
 unicode-blocks = "0.1.9"
 unicode-normalization = "0.1.24"
 unicode-segmentation = "1.11.0"
 ureq = { version = "2.9.6", default-features = false, features = ["tls", "proxy-from-env"] }
 yada = "0.5.1"
-derive_builder = "0.20.2"
 
 
 [profile.release]
