Switch to reqwest from ureq for WebAssembly

--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -30,7 +30,7 @@ once_cell.workspace = true
 serde.workspace = true
 tar = { workspace = true }
 thiserror.workspace = true
-ureq = { workspace = true }
+reqwest.workspace = true
 yada.workspace = true
 
 [dev-dependencies]
