--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,31 +24,32 @@ lindera-cli = { version = "0.38.0", path = "lindera-cli" }
 anyhow = "1.0.93"
 bincode = "1.3.3"
 byteorder = "1.5.0"
-clap = { version = "4.5.20", features = ["derive", "cargo"] }
+clap = { version = "4.5.21", features = ["derive", "cargo"] }
 criterion = { version = "0.5.1", features = ["html_reports"] }
 csv = "1.3.1"
 derive_builder = "0.20.2"
 encoding = "0.2.33"
 encoding_rs = "0.8.35"
 encoding_rs_io = "0.1.7"
-flate2 = "1.0.28"
+flate2 = "1.0.35"
 glob = "0.3.1"
 kanaria = "0.2.0"
 log = "0.4.21"
 once_cell = "1.19.0"
 rand = "0.8.5"
 regex = "1.11.1"
+reqwest = "0.12.9"
 serde = { version = "1.0.215", features = ["derive"] }
-serde_json = "1.0.132"
+serde_json = "1.0.133"
 serde_yaml = "0.9.34"
 strum = { version = "0.26.2", features = ["derive"] }
 strum_macros = "0.26.2"
 tar = "0.4.43"
 thiserror = "2.0.3"
+tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
 unicode-blocks = "0.1.9"
 unicode-normalization = "0.1.24"
 unicode-segmentation = "1.11.0"
-ureq = { version = "2.9.6", default-features = false, features = ["tls", "proxy-from-env"] }
 yada = "0.5.1"
 
 
