--- a/lindera-cli/Cargo.toml
+++ b/lindera-cli/Cargo.toml
@@ -19,6 +19,9 @@ unidic = ["lindera/unidic"]  # Include UniDic dictionary (Japanese)
 ko-dic = ["lindera/ko-dic"]  # Include ko-dic dictionary (Korean)
 cc-cedict = ["lindera/cc-cedict"]  # Include CC-CEDICT dictionary (Chinese)
 compress = ["lindera/compress"]  # Compress dictionaries
+cjk = ["lindera/cjk"] # Include CJK dictionaries
+cjk2 = ["lindera/cjk2"] # Include CJK dictionaries
+cjk3 = ["lindera/cjk3"] # Include CJK dictionaries
 
 [dependencies]
 anyhow.workspace = true
