--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -6,14 +6,15 @@ on:
     - cron: 0 0 * * SUN
 
 jobs:
-  test:
-    name: Test
+  fmt:
+    name: Format
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
-        toolchain: [stable, beta, nightly]
-        features: ["ipadic", "ko-dic", "cc-cedict"]
-    runs-on: ${{ matrix.os }}
+        platform:
+          - runner: ubuntu-latest
+            target: x86_64
+        toolchain: [stable]
+    runs-on: ${{ matrix.platform.runner }}
     steps:
       - name: Run checkout
         uses: actions/checkout@v4
@@ -24,5 +25,65 @@ jobs:
           toolchain: ${{ matrix.toolchain }}
           components: rustfmt, clippy
 
+      - name: Run format
+        run: cargo fmt --all -- --check
+
+  check:
+    name: Check
+    needs: [fmt]
+    strategy:
+      matrix:
+        platform:
+          - runner: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+          - runner: macOS-latest
+            target: x86_64-apple-darwin
+          - runner: macOS-latest
+            target: aarch64-apple-darwin
+          - runner: windows-latest
+            target: x86_64-pc-windows-msvc
+        toolchain: [stable, beta, nightly]
+    runs-on: ${{ matrix.platform.runner }}
+    steps:
+      - name: Run checkout
+        uses: actions/checkout@v4
+
+      - name: Install toolchain
+        uses: dtolnay/rust-toolchain@v1
+        with:
+          toolchain: ${{ matrix.toolchain }}
+          components: rustfmt, clippy
+
+      - name: Run check
+        run: cargo check --target "${{ matrix.platform.target }}" --all-features"
+
+  test:
+    name: Test
+    needs: [check]
+    strategy:
+      matrix:
+        platform:
+          - runner: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+          - runner: macOS-latest
+            target: x86_64-apple-darwin
+          - runner: macOS-latest
+            target: aarch64-apple-darwin
+          - runner: windows-latest
+            target: x86_64-pc-windows-msvc
+        toolchain: [stable, beta, nightly]
+        features: ["ipadic", "ko-dic", "cc-cedict"]
+    runs-on: ${{ matrix.platform.runner }}
+    steps:
+      - name: Run checkout
+        uses: actions/checkout@v4
+
+      - name: Install toolchain
+        uses: dtolnay/rust-toolchain@v1
+        with:
+          toolchain: ${{ matrix.toolchain }}
+          target: ${{ matrix.platform.target }}
+          components: rustfmt, clippy
+
       - name: Run test
-        run: cargo test --features "${{ matrix.features }}"
+        run: cargo test --target "${{ matrix.platform.target }}" --features "${{ matrix.features }}"
