--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -52,6 +52,7 @@ jobs:
         uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: ${{ matrix.toolchain }}
+          target: ${{ matrix.platform.target }}
           components: rustfmt, clippy
 
       - name: Run check
