--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -36,8 +36,6 @@ jobs:
           - runner: ubuntu-latest
             target: x86_64-unknown-linux-gnu
           - runner: macOS-latest
-            target: x86_64-apple-darwin
-          - runner: macOS-latest
             target: aarch64-apple-darwin
           - runner: windows-latest
             target: x86_64-pc-windows-msvc
@@ -66,13 +64,11 @@ jobs:
           - runner: ubuntu-latest
             target: x86_64-unknown-linux-gnu
           - runner: macOS-latest
-            target: x86_64-apple-darwin
-          - runner: macOS-latest
             target: aarch64-apple-darwin
           - runner: windows-latest
             target: x86_64-pc-windows-msvc
         toolchain: [stable, beta, nightly]
-        features: ["ipadic", "ko-dic", "cc-cedict"]
+        features: ["cjk,compress"]
     runs-on: ${{ matrix.platform.runner }}
     steps:
       - name: Run checkout
