Cow -> custom enum

--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-default = []
+default = ["memmap"]
 compress = []
 memmap = ["dep:memmap2"]
 
