--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -131,7 +131,7 @@ jobs:
         uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: ${{ matrix.toolchain }}
-          targets: ${{ matrix.platform.runner }}
+          target: ${{ matrix.platform.target }}
 
       - name: Add msbuild to PATH
         if: matrix.platform.runner == 'windows-latest'
