chore: make the `reqwest` dependency strictly used during `build.rs` across all crates
This adjusts all the Cargo.toml's so that `reqwest` doesn't end up in
the dependency tree of downstream consumers

--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -15,6 +15,7 @@ license = "MIT"
 default = []
 compress = []
 memmap = ["dep:memmap2"]
+build_rs = ["dep:reqwest"]
 
 [dependencies]
 anyhow.workspace = true
@@ -29,12 +30,15 @@ flate2 = { workspace = true }
 glob.workspace = true
 log.workspace = true
 once_cell.workspace = true
-reqwest.workspace = true
 serde.workspace = true
 tar = { workspace = true }
 thiserror.workspace = true
 yada.workspace = true
 memmap2 = { workspace = true, optional = true }
+
+[dependencies.reqwest]
+workspace = true
+optional = true
 
 [dev-dependencies]
 rand.workspace = true
