--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -29,6 +29,7 @@ encoding_rs_io.workspace = true
 flate2 = { workspace = true }
 glob.workspace = true
 log.workspace = true
+md5.workspace = true
 once_cell.workspace = true
 rand.workspace = true
 serde.workspace = true
