--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,9 @@ anyhow = "1.0.98"
 bincode = "1.3.3"
 byteorder = "1.5.0"
 clap = { version = "4.5.37", features = ["derive", "cargo"] }
-criterion = { version = "0.5.1", features = ["html_reports"] }
+criterion = { version = "0.5.1", default-features = false, features = [
+    "html_reports",
+] }
 csv = "1.3.1"
 derive_builder = "0.20.2"
 encoding = "0.2.33"
@@ -38,7 +40,9 @@ log = "0.4.27"
 md5 = "0.7.0"
 memmap2 = "0.9.5"
 once_cell = "1.21.3"
-rand = "0.9.1"
+rand = { version = "0.9.1", default-features = false, features = [
+    "small_rng",
+] } # Specify `default-features` and `features` to support WebAssembly
 regex = "1.11.1"
 reqwest = "0.12.15"
 serde = { version = "1.0.219", features = ["derive"] }
@@ -48,7 +52,13 @@ strum = { version = "0.27.1", features = ["derive"] }
 strum_macros = "0.27.1"
 tar = "0.4.44"
 thiserror = "2.0.12"
-tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1.44.2", features = [
+    "rt",
+    "macros",
+    "time",
+    "sync",
+    "io-util",
+] }
 unicode-blocks = "0.1.9"
 unicode-normalization = "0.1.24"
 unicode-segmentation = "1.11.0"
