--- a/lindera-ipadic/Cargo.toml
+++ b/lindera-ipadic/Cargo.toml
@@ -24,7 +24,4 @@ lindera-dictionary.workspace = true
 
 [build-dependencies]
 tokio.workspace = true
-
-[build-dependencies.lindera-dictionary]
-workspace = true
-features = ["build_rs"]
+lindera-dictionary = { workspace = true, features = ["build_rs"] }
