--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,14 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
-lindera-dictionary = { version = "0.42.2", path = "lindera-dictionary", default-features = false }
-lindera-cc-cedict = { version = "0.42.2", path = "lindera-cc-cedict" }
-lindera-ipadic = { version = "0.42.2", path = "lindera-ipadic" }
-lindera-ipadic-neologd = { version = "0.42.2", path = "lindera-ipadic-neologd" }
-lindera-ko-dic = { version = "0.42.2", path = "lindera-ko-dic" }
-lindera-unidic = { version = "0.42.2", path = "lindera-unidic" }
-lindera = { version = "0.42.2", path = "lindera" }
-lindera-cli = { version = "0.42.2", path = "lindera-cli" }
+lindera-dictionary = { version = "0.42.3", path = "lindera-dictionary", default-features = false }
+lindera-cc-cedict = { version = "0.42.3", path = "lindera-cc-cedict" }
+lindera-ipadic = { version = "0.42.3", path = "lindera-ipadic" }
+lindera-ipadic-neologd = { version = "0.42.3", path = "lindera-ipadic-neologd" }
+lindera-ko-dic = { version = "0.42.3", path = "lindera-ko-dic" }
+lindera-unidic = { version = "0.42.3", path = "lindera-unidic" }
+lindera = { version = "0.42.3", path = "lindera" }
+lindera-cli = { version = "0.42.3", path = "lindera-cli" }
 
 anyhow = "1.0.98"
 bincode = "1.3.3"
@@ -44,7 +44,9 @@ rand = { version = "0.9.1", default-features = false, features = [
     "small_rng",
 ] } # Specify `default-features` and `features` to support WebAssembly
 regex = "1.11.1"
-reqwest = { version = "0.12.15", features = ["rustls-tls"], default-features = false } # use rustls-tls instead of native-tls which avoids the need to link openssl
+reqwest = { version = "0.12.15", features = [
+    "rustls-tls",
+], default-features = false } # use rustls-tls instead of native-tls which avoids the need to link openssl
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 serde_yaml = "0.9.34"
