--- a/lindera-ipadic/Cargo.toml
+++ b/lindera-ipadic/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "lindera-ipadic"
-version = "0.43.0"
+version = "0.43.1"
 edition = "2021"
 description = "A Japanese morphological dictionary for IPADIC."
 documentation = "https://docs.rs/lindera-ipadic"
-homepage = "https://github.com/lindera-morphology/lindera"
-repository = "https://github.com/lindera-morphology/lindera"
+homepage = "https://github.com/lindera/lindera"
+repository = "https://github.com/lindera/lindera"
 readme = "README.md"
 keywords = ["japanese", "morphological", "dictionary", "ipadic"]
 categories = ["text-processing"]
