--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "lindera"
-version = "0.43.0"
+version = "0.43.1"
 edition = "2021"
 description = "A morphological analysis library."
 documentation = "https://docs.rs/lindera"
-homepage = "https://github.com/lindera-morphology/lindera"
-repository = "https://github.com/lindera-morphology/lindera"
+homepage = "https://github.com/lindera/lindera"
+repository = "https://github.com/lindera/lindera"
 readme = "README.md"
 keywords = ["morphological", "analysis", "library"]
 categories = ["text-processing"]
